--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,63 @@
+/************************************************************************************************************
+****                                             GLOBAL
+************************************************************************************************************/
+body{
+    background-color: #fff;
+}
+
+h1{
+    color: green;
+    text-align: center;
+    padding-top: 10%;
+}
+.columns h3{
+    color: blueviolet;
+}
+
+.column{
+    border: 2px solid black;
+    box-shadow: 20px purple;
+    border-radius: 20px;
+    margin-top: 10%;
+    width: 100px;
+}
+h3{
+    text-align: center;
+}
+
+
+/************************************************************************************************************
+****                                             NAV
+************************************************************************************************************/
+
+
+
+
+/************************************************************************************************************
+****                                             HEADER
+************************************************************************************************************/
+
 header{
-    background-image: url(resources/images/champ-ble.webp);
+    background-image: url(../images/champ-ble.webp);
     height: 100vh;
     background-size: cover;
+}
+
+/************************************************************************************************************
+****                                             NOS SERVICES
+************************************************************************************************************/
+.nos-services{
+    background-image: url(../images/cereales.webp);
+    height: 100vh;
+    background-size: cover;
+}
+
+
+/************************************************************************************************************
+****                                             FOOTER
+************************************************************************************************************/
+footer {
+    background-color: black;
+    color: #fff;
+    text-align: center;
 }
